test_case/rust-lang_rust/86492_897736981_1.rs
rust
#![deny(no_mangle_generic_items)]
trait Trait {
    #[no_mangle] fn foo() {} //~ ERROR functions generic over types or consts must be mangled
}
